[gd_scene load_steps=15 format=2]

[ext_resource path="res://Input Menu/InputMapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://Input Menu/ListeningForEvent.gd" type="Script" id=2]
[ext_resource path="res://Input Menu/InputMenu.gd" type="Script" id=3]
[ext_resource path="res://Input Menu/ActionList.gd" type="Script" id=4]
[ext_resource path="res://Resource/PixelSize10.tres" type="DynamicFontData" id=5]
[ext_resource path="res://Resource/Minecraft.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="InputMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="InputMapper" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.109804, 0.223529, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 340.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
text = "Input Map"
align = 1

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 340.0
margin_bottom = 37.0
custom_constants/separation = 100
alignment = 1

[node name="Action" type="Label" parent="VBoxContainer/Header"]
margin_right = 46.0
margin_bottom = 11.0
size_flags_horizontal = 3
theme = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Action"

[node name="Control" type="Label" parent="VBoxContainer/Header"]
margin_left = 146.0
margin_right = 193.0
margin_bottom = 11.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Control"

[node name="Button" type="Label" parent="VBoxContainer/Header"]
margin_left = 293.0
margin_right = 340.0
margin_bottom = 11.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Button"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 340.0
margin_bottom = 133.0
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_constants/separation = 1
alignment = 1
script = ExtResource( 4 )

[node name="Save and Exit" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 340.0
margin_bottom = 160.0
custom_constants/separation = 30
alignment = 1

[node name="Back to Game" type="Button" parent="VBoxContainer/Save and Exit"]
margin_left = 10.0
margin_right = 92.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "Back to Game"

[node name="Reset to Default" type="Button" parent="VBoxContainer/Save and Exit"]
margin_left = 122.0
margin_right = 216.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 7 )
text = "Reset to Default"

[node name="Save" type="Button" parent="VBoxContainer/Save and Exit"]
margin_left = 246.0
margin_right = 329.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 7 )
text = "Save Changes"

[node name="ListeningForEvent" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.607843 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="ListeningForEvent"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Listening for Key..."
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="VBoxContainer/Save and Exit/Back to Game" to="." method="_on_Back_to_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Save and Exit/Reset to Default" to="." method="_on_Reset_to_Default_pressed"]
